added longClick to map, fixed textView sizes for large texts

--- a/starter/app/src/main/res/layout/it_reminder.xml
+++ b/starter/app/src/main/res/layout/it_reminder.xml
@@ -25,12 +25,15 @@
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
+                android:maxWidth="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_small"
                 android:layout_marginLeft="@dimen/padding_small"
                 android:text="@{item.title}"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_normal"
+                android:maxLines="1"
+                android:ellipsize="end"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Title" />
@@ -38,9 +41,12 @@
             <TextView
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
+                android:maxWidth="120dp"
                 android:layout_height="wrap_content"
                 android:text="@{item.description}"
                 android:textSize="@dimen/text_size_small"
+                android:maxLines="1"
+                android:ellipsize="end"
                 app:layout_constraintStart_toStartOf="@id/title"
                 app:layout_constraintTop_toBottomOf="@id/title"
                 tools:text="Description" />
@@ -48,11 +54,14 @@
             <TextView
                 android:id="@+id/location"
                 android:layout_width="wrap_content"
+                android:maxWidth="180dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="end"
                 android:text="@{item.location}"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/text_size_small"
+                android:maxLines="2"
+                android:ellipsize="end"
                 app:layout_constraintBottom_toBottomOf="@+id/description"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/title"
