--- a/starter/app/src/main/res/layout/fragment_save_reminder.xml
+++ b/starter/app/src/main/res/layout/fragment_save_reminder.xml
@@ -55,6 +55,7 @@
         <TextView
             android:id="@+id/selectedLocation"
             android:layout_width="wrap_content"
+            android:maxWidth="160dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_normal"
             android:layout_marginRight="@dimen/margin_normal"
